--- a/Dictionnaire/Dictionnaire.cbp
+++ b/Dictionnaire/Dictionnaire.cbp
@@ -31,6 +31,22 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="gestbib.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="gestbib.h" />
+		<Unit filename="gestexpr.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="gestexpr.h" />
+		<Unit filename="gestorth.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="gestorth.h" />
+		<Unit filename="gestrech.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="gestrech.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
